@@ -79,6 +79,9 @@ since -pre5:
 - MUCRoomParticipant: added status member
 - VCardManager: allow cancellation of VCard operations
 - ConnectionListener/Client/Component: added stream events/onStreamEvent()
+- Client/Base: renamed fileDescriptor() --> socket()
+- TLS: TLS server support when used with GnuTLS
+- Search: search(): Dataform *form --> const DataForm& form
 
 
 v0.8 -- 08 Apr 2006
